--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "StoryPoint for Asana",
-  "version": "0.0.20",
+  "name": "Task Toolkit for Asana",
+  "version": "0.0.21",
   "manifest_version": 2,
-  "description": "track your scrum story points on your Asana board.",
+  "description": "Estimate time on your Asana board.",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
