--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,19 +1,13 @@
 {
   "name": "Task Toolkit for Asana",
   "version": "0.0.21",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "Estimate time on your Asana board.",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
   "default_locale": "en",
-  "background": {
-    "scripts": [
-      "scripts/chromereload.js",
-      "scripts/background.js"
-    ]
-  },
   "content_scripts": [
     {
       "js": [
@@ -25,5 +19,8 @@
     }
   ],
   "permissions": [
+  ],
+  "host_permissions": [
+    "https://app.asana.com/*"
   ]
 }
